# sample-programs-website

./: .gitignore  CNAME  README.md  additional-language-colors.yml  feed.xml  generate.sh  index.html  jekyll.sh  language-colors.yml  pull_request_template.md  pyproject.toml  requirements.txt  robots.txt  sitemap.xml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: language-article-request.md  project-article-request.md  project-request.md  sample-program-article-request.md  sample-program-project-request.md
.github/disabled/: project-request.md
.github/workflows/: main.yml
_data/: authors.yml
_includes/: article_list.md
_layouts/: default.html
assets/css/: style.css
docs/: CNAME  _config.local.yml  _config.yml  index.md
docs/_data/: authors.yml
docs/_includes/: body.html  breadcrumb.html  featured_image.html  footer.html  head.html  header.html  main.html  navigation.html  primary_body.html  twitter_card.html
docs/_layouts/: default.html
docs/languages/: index.md
docs/projects/: index.md
languages/: index.html
languages/_posts/: 2019-10-19-java.md  2021-08-12-ruby.md
languages/ada/: index.html
languages/agda/: index.html
languages/algol60/: index.html
languages/algol68/: index.html
languages/arkscript/: index.html
languages/awk/: index.html
languages/baik/: index.html
languages/ballerina/: index.html
languages/bash/: index.html
languages/batch/: index.html
languages/beef/: index.html
languages/befunge/: index.html
languages/boo/: index.html
languages/bracmat/: index.html
languages/brainfuck/: index.html
languages/c/: index.html
languages/c-plus-plus/: index.html
languages/c-sharp/: index.html
languages/c-star/: index.html
languages/c2/: index.html
languages/carp/: index.html
languages/chapel/: index.html
projects/: index.html  index.md
related/: index.html
scripts/: automate.py  cli.py  constants.py  logging_setup.py  migrate.py
templates/: LANGUAGE_ARTICLE_TEMPLATE.md  PROJECT_ARTICLE_TEMPLATE.md
(+5332 files in other folders)
