[project]
name = "sample-programs-website"
version = "2026.3.8"
description = "Sample Programs in Every Programming Language"
readme = ".github/README.md"
requires-python = ">=3.10,<4.0"
license = {file = "LICENSE" }

dependencies = [
    "snakemd (>=2.4.0,<3.0.0)",
    "subete (>=0.22.2,<0.23.0)",
    "image-titler (>=2.4.0,<2.5.0)",
    "glotter2 (>=0.15.0,<0.16.0)",
    "pyyaml (>=6.0,<7.0)"
]

# Initiator of the collection
authors = [
    {name = "Jeremy Grifski", email = "jeremy.grifski@therenegadecoder.com"}
]

[tool.poetry]
package-mode = false
